--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,9 +1,3 @@
-/* delete image */
-//.image-edit-thumb {
-//  height: 205px;
-//  width: 205px;
-//  padding-top: 5px;
-//}
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
@@ -23,24 +17,22 @@
 }
 
 /* entry display */
-div.entry {
-  height: 90px;
-  width: 100%;
+@mixin shared-entry {
   border-radius: 5px;
-  padding: 10px;
   margin: 4px 0 12px 8px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   overflow: hidden;
   text-overflow-multiline: ellipsis;
 }
-
 div.entry-main {
-  border-radius: 5px;
-  padding: 20px;
-  margin: 4px 0 12px 8px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  overflow: hidden;
-  text-overflow-multiline: ellipsis;
+  @include shared-entry;
+}
+
+div.entry {
+  height: 90px;
+  width: 100%;
+  padding: 10px;
+  @include shared-entry;
 }
 
 /* seller edit and delete button */
@@ -54,30 +46,6 @@ div.seller-options {
 .d-img {
   max-width: 100%;
   max-height: 100%;
-}
-
-/* mobile div */
-
-.wrapper {
-  color: white;
-  display: flex;
-  flex-flow: row nowrap;
-  min-height: 100%;
-}
-
-.icon {
-  align-self: center;
-  color: black;
-  flex: 1 1 auto;
-  font-size: 32px;
-}
-
-.content {
-  //background-color: lightgreen;
-  color: black;
-  flex: 12 1 auto;
-  //padding: px;
-  //align-self: center;
 }
 
 /* */
@@ -117,13 +85,126 @@ div.des-entry {
   -o-text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  height:100%; 
-  width:410px; 
+  height:100%;
   display:inline-block;
 }
 
+/* mobile div for product */
+
+@mixin wrapper {
+  color: white;
+  display: flex;
+  flex-flow: row nowrap;
+  min-height: 100%;
+}
+
+@mixin icon{
+  align-self: center;
+  color: black;
+  flex: 1 1 auto;
+  font-size: 32px;
+}
+
+@mixin content{
+  color: black;
+  flex: 12 1 auto;
+}
+
+/* mobile div for product */
+
+.wrapper {
+  @include wrapper;
+  .icon {
+    @include icon;
+  }
+
+  .content {
+    @include content;
+  }
+}
+
+/* render the main menu diff for small devices */
 @media screen and (max-width: 480px){
-  .small-des-td {
-    width:200px; 
+  .main-wrapper {
+    @include wrapper;
+
+    .icon {
+      @include icon;
+    }
+
+    .content {
+      @include content;
+      .card-title{
+        font-size: 150%;
+      }
+    }
+  }
+}
+
+/* centered columns styles */
+.row-centered {
+  text-align:center;
+}
+
+.col-centered {
+  display:inline-block;
+  float:none;
+  /* reset the text-align */
+  text-align:left;
+  /* inline-block space fix */
+  margin-right:-4px;
+}
+
+/* search */
+.category-head{
+  position: relative;
+  text-transform: uppercase;
+  margin: 0;
+
+  h1{
+    display: inline-block;
+    margin-bottom: 3px;
+    color: #3eb495;
+    font-weight: 400;
+    font-size: 1.5rem;
+    position: relative;
+
+    &::after {
+      position: absolute;
+      right: 0;
+      bottom: -4px;
+      left: 0;
+      height: 1px;
+      background: #68bda6;
+      content: "";
+    }
+  }
+  &::after {
+    position: absolute;
+    right: 0;
+    bottom: -2px;
+    left: 0;
+    height: 1px;
+    background: #0e90d2;
+    content: "";
+  }
+
+  .filter{
+    float: right;
+    margin: 15px;
+    font-size: .9rem;
+    display: inline-block;
+    padding: 2px 5px;
+    background: #aaa;
+    color: #fff;
+    cursor: pointer;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+  }
+
+  form{
+    background: #aaa;
+    display: none;
   }
 }
