--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,41 +1,40 @@
 <% provide(:title, @category.name) %>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="<%= category_path(@category) %>"><%= @category.name %></a>
-    </div>
-    <div class="navbar-form">
-      <%= search_form_for @q, url: category_path(@category), class: 'navbar-form navbar-left', role: 'search'  do |f| %>
-          <div class="form-group">
-            <%= f.search_field :name_or_description_cont, class: 'form-control', placeholder: 'Search' %>
-            <div id="hidden-filters" class="form-group" style="display: none">
-              <%= f.search_field :price_gteq, class: 'form-control', placeholder: 'Min Price' %>
-              <%= f.search_field :price_lteq, class: 'form-control', placeholder: 'Max Price' %>
-            </div>
-          </div>
-          <%= f.submit "Submit", class: 'btn btn-default' %>
-      <% end %>
-      <!--<form class="navbar-form navbar-left" role="search">-->
-        <!--<div class="form-group">-->
-          <!--<input type="text" class="form-control" placeholder="Search">-->
-        <!--</div>-->
-        <!--<button type="submit" class="btn btn-default">Submit</button>-->
-      <!--</form>-->
-    </div>
-    <div class="navbar-btn">
-      <button type="button" class="btn btn-default navbar-btn" onclick="$('#hidden-filters').toggle();">Filter</button>
-    </div>
+<div class="category-head">
+  <h1>
+    <%= @category.name %>
+  </h1>
+  <span class="filter" onclick='$("#filter").toggle()'>
+     Filter
+  </span>
+  <%= search_form_for @q, url: category_path(@category), id: 'filter'  do |f| %>
+      <div class="form-group row">
+        <%= f.label :contains, class: 'col-sm-1 col-form-label' %>
+        <div class="col-sm-4">
+          <%= f.search_field :name_or_description_cont, class: 'form-control', placeholder: 'Contains' %>
+        </div>
+      </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-  </div><!-- /.container-fluid -->
-</nav>
+
+      <div class="form-group row">
+        <%= f.label :from, class: 'col-sm-1 col-form-label' %>
+        <div class="col-sm-4">
+          <%= f.search_field :price_gteq, class: 'form-control', placeholder: 'Min Price' %>
+        </div>
+        <%= f.label :to, class: 'col-sm-1 col-form-label' %>
+        <div class="col-sm-4">
+          <%= f.search_field :price_lteq, class: 'form-control', placeholder: 'Max Price' %>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <%= f.label :posted_on_and_after, class: 'col-sm-3 col-form-label' %>
+        <div class="col-sm-4">
+          <%= f.search_field :created_at_gteq, class: 'form-control', type: 'date' %>
+        </div>
+      </div>
+        <%= f.submit "Submit", class: 'btn btn-default' %>
+  <% end %>
+</div>
 
 <div class="row" id="products">
   <% @products.each do |product| %>
