--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Beljom <small>(Alpha Version)</small></Alpha></a>
+          <a class="navbar-brand" href="/">Beljom <small>(Alpha Version)</small></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -75,12 +75,5 @@
       <% end %>
       <%= yield %>
     </div>
-
-    <!--<footer class="footer">-->
-      <!--<div class="container">-->
-        <!--<p class="text-muted"> We connect buyers and sellers</p>-->
-      <!--</div>-->
-    <!--</footer>-->
-
   </body>
 </html>
