--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,6 +1,3 @@
-//@import "bootstrap-sprockets";
-//@import "bootstrap";
-
 .image-container-edit {
   position: relative;
   display: inline-block;
@@ -86,20 +83,31 @@ div.des-entry {
 
 @mixin wrapper {
   color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: row nowrap;
   flex-flow: row nowrap;
   min-height: 100%;
 }
 
 @mixin icon{
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
   align-self: center;
   color: black;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   font-size: 32px;
 }
 
 @mixin content{
   color: black;
+  -webkit-box-flex: 12;
+  -ms-flex: 12 1 auto;
   flex: 12 1 auto;
 }
 
@@ -191,8 +199,6 @@ div.des-entry {
     background: #aaa;
     color: #fff;
     cursor: pointer;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
     border-radius: 2px;
   }
 
