--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,7 +24,7 @@
 </div>
 <div class="demo">
   <div class="item">
-    <div class="clearfix" style="max-width:474px;">
+    <div class="clearfix">
       <ul id="image-gallery" class="gallery list-unstyled cS-hidden">
         <%	 @product.product_images.each do |image| %>
         <li data-thumb="<%= image.url(:gallery_thumb) %>">
