--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,12 +82,12 @@
       <% end %>
       <%= yield %>
     </div>
-  </body>
-  <footer class="footer navbar-fixed-bottom">
+  <div class="footer">
     <div class="container" style="background-color: #BBBBBB">
       <div class="col-md-10 col-md-offset-1 text-center">
         <h6>Coded with <i class="fa fa-heart red"></i> by the Dev Team at <a href="https://www.facebook.com/yayoofficialpage"></a>Y@y0</h6>
       </div>
     </div>
-  </footer>
+  </div>
+  </body>
 </html>
