--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,9 +1,7 @@
-<% provide(:title, 'Categories') %>
-
 <section class="jumbotron text-center">
   <div class="container">
     <h1 class="jumbotron-heading">Beljom</h1>
-    <p class="lead text-muted">Mission Statement.</p>
+    <p class="lead text-muted">wi go ɛp yu fɔ bay ɛn sɛl</p>
   </div>
 </section>
 
